fix homepage flex align and put features into frontmatter

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,6 +8,7 @@
   --white: #fff;
   --lime: #91b301;
   --teal: #11a5a1;
+  --darkteal: #0e8481;
   --sky: #0cb3e1;
   --tangelo: #f44500;
   --yellow: #f4b200;
